--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -127,9 +127,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17281824" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17272516" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.quod.us/article/rss-feeds-for-major-us-newspapers">22 top US newspapers in an RSS OPML list</a>
+                                    <a href="https://grunfy.com/scaler.html">Interactive guitar scales diagrams</a>
                                 </span>
                             </td>
                         </tr>
@@ -141,9 +141,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17272516" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17281824" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://grunfy.com/scaler.html">Interactive guitar scales diagrams</a>
+                                    <a href="https://www.quod.us/article/rss-feeds-for-major-us-newspapers">22 top US newspapers in an RSS OPML list</a>
                                 </span>
                             </td>
                         </tr>
@@ -509,7 +509,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17288454">
                                         
-                                            18 comments
+                                            19 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=jabagawee">jabagawee</a></strong> &nbsp;•&nbsp;
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://cowlark.com/2018-02-27-6502-arithmetic/">6502 arithmetic and why it is terrible</a>
+                                    <a href="https://www.edge.org/conversation/rory_sutherland-this-thing-for-which-we-have-no-name">This Thing for Which We Have No Name (2014)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17275797">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17285846">
                                         
-                                            59 comments
+                                            28 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=bane">bane</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528591265"
+                                            href="https://news.ycombinator.com/user?id=DiabloD3">DiabloD3</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528735129"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     89 points
                                 </span>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528777811" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528778409" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
