--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -527,17 +527,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://joeyh.name/blog/entry/the_single_most_important_criteria_when_replacing_Github/">The single most important criteria when replacing GitHub</a>
+                                    <a href="https://twitter.com/DanielMicay/status/1006299769214562305">CopperheadOS has imploded</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17248713">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17289536">
                                         
-                                            131 comments
+                                            68 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=edward">edward</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528303670"
+                                            href="https://news.ycombinator.com/user?id=nitrohorse">nitrohorse</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528760102"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     211 points
                                 </span>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.youtube.com/watch?v=wSdV1M7n4gQ">Anders Hejlsberg on Modern Compiler Construction (2016) [video]</a>
+                                    <a href="http://joeyh.name/blog/entry/the_single_most_important_criteria_when_replacing_Github/">The single most important criteria when replacing GitHub</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17280589">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17248713">
                                         
-                                            35 comments
+                                            131 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=PredictorY">PredictorY</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528670647"
+                                            href="https://news.ycombinator.com/user?id=edward">edward</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528303670"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    210 points
+                                    211 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528797610" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528798207" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
