--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -299,7 +299,7 @@
                                             href="https://news.ycombinator.com/user?id=mudil">mudil</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528756617"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    77 points
+                                    78 points
                                 </span>
                             </td>
                         </tr>
@@ -389,7 +389,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17286075">
                                         
-                                            63 comments
+                                            64 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=mrbbk">mrbbk</a></strong> &nbsp;•&nbsp;
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://stratechery.com/2018/the-scooter-economy/">The Scooter Economy</a>
+                                    <a href="https://www.bbc.co.uk/news/business-44399028">Why some job adverts put women off applying</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17284094">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17291195">
                                         
-                                            98 comments
+                                            2 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=djug">djug</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528724637"
+                                            href="https://news.ycombinator.com/user?id=blowski">blowski</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528785976"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    77 points
+                                    11 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528801208" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528801807" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
