--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://twitter.com/thelarkinn/status/1006746626617008128?s=21">Office 365 is being completely rewritten JavaScript</a>
+                                    <a href="https://www.irishtimes.com/culture/books/rome-vs-greece-a-little-known-clash-of-empires-1.3523821">Rome vs Greece: a clash of empires</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17300893">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17296910">
                                         
-                                            296 comments
+                                            125 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=mhoad">mhoad</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528873230"
+                                            href="https://news.ycombinator.com/user?id=ascertain">ascertain</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528830907"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    232 points
+                                    236 points
                                 </span>
                             </td>
                         </tr>
@@ -251,7 +251,7 @@
                                             href="https://news.ycombinator.com/user?id=henryaj">henryaj</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528738685"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    232 points
+                                    233 points
                                 </span>
                             </td>
                         </tr>
@@ -317,7 +317,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17298645">
                                         
-                                            169 comments
+                                            170 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=smacktoward">smacktoward</a></strong> &nbsp;•&nbsp;
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528907408" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528908008" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
