--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -539,7 +539,7 @@
                                             href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528838092"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    323 points
+                                    324 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.indiatoday.in/technology/news/story/facebook-confirms-that-it-tracks-how-you-move-mouse-on-the-computer-screen-1258189-2018-06-12">Facebook confirms that it tracks mouse movements</a>
+                                    <a href="https://twitter.com/thelarkinn/status/1006746626617008128?s=21">Office 365 is being completely rewritten in JavaScript</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17301336">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17300893">
                                         
-                                            168 comments
+                                            366 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=shahocean">shahocean</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528878945"
+                                            href="https://news.ycombinator.com/user?id=mhoad">mhoad</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528873230"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    313 points
+                                    315 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528916409" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528917006" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
