--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -227,7 +227,7 @@
                                             href="https://news.ycombinator.com/user?id=aaronbrethorst">aaronbrethorst</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528924263"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    252 points
+                                    253 points
                                 </span>
                             </td>
                         </tr>
@@ -275,7 +275,7 @@
                                             href="https://news.ycombinator.com/user?id=eb0la">eb0la</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528898192"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    240 points
+                                    242 points
                                 </span>
                             </td>
                         </tr>
@@ -395,7 +395,7 @@
                                             href="https://news.ycombinator.com/user?id=evo_9">evo_9</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528907131"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    215 points
+                                    219 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://blog.openai.com/language-unsupervised/">Improving Language Understanding with Unsupervised Learning</a>
+                                    <a href="http://arrgh.tim-smith.us/">A newcomer’s (angry) guide to R</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17286810">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17305878">
                                         
-                                            18 comments
+                                            118 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=gdb">gdb</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528740752"
+                                            href="https://news.ycombinator.com/user?id=striking">striking</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528915198"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    188 points
+                                    192 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528950610" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528951208" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
