--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.bbc.com/news/business-44465331">UK’s Dixons Carphone admits huge data breach</a>
+                                    <a href="https://xkcd.com/2006/">Xkcd: Customer Rewards</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17301527">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17305601">
                                         
-                                            59 comments
+                                            11 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=escapologybb">escapologybb</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528881798"
+                                            href="https://news.ycombinator.com/user?id=denzil_correa">denzil_correa</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528913349"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    89 points
+                                    45 points
                                 </span>
                             </td>
                         </tr>
@@ -299,7 +299,7 @@
                                             href="https://news.ycombinator.com/user?id=wallflower">wallflower</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528910699"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    42 points
+                                    43 points
                                 </span>
                             </td>
                         </tr>
@@ -443,7 +443,7 @@
                                             href="https://news.ycombinator.com/user?id=rmason">rmason</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528935361"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    11 points
+                                    12 points
                                 </span>
                             </td>
                         </tr>
@@ -563,7 +563,7 @@
                                             href="https://news.ycombinator.com/user?id=spahl">spahl</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528927316"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    14 points
+                                    15 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528959009" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528959609" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
