--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.dannyguo.com/blog/the-decline-of-the-macbook-pro/">The Decline of the MacBook Pro</a>
+                                    <a href="https://blog.torproject.org/dont-let-facebook-or-any-tracker-follow-you-web">Don’t Let Facebook, or Any Tracker, Follow You on the Web</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17266492">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17308281">
                                         
-                                            292 comments
+                                            94 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=dguo">dguo</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528472263"
+                                            href="https://news.ycombinator.com/user?id=jerheinze">jerheinze</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528936514"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     210 points
                                 </span>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528965009" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528965609" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
