--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -227,7 +227,7 @@
                                             href="https://news.ycombinator.com/user?id=laravelfactory">laravelfactory</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528949770"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    19 points
+                                    20 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.bbc.com/news/business-44465331">UK’s Dixons Carphone admits huge data breach</a>
+                                    <a href="https://www.1843magazine.com/technology/rewind/the-crooked-timber-of-humanity">Nearly two centuries ago, France was first hit by a data network attack (2017)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17301527">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17305729">
                                         
-                                            59 comments
+                                            11 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=escapologybb">escapologybb</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528881798"
+                                            href="https://news.ycombinator.com/user?id=startupflix">startupflix</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528914217"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    89 points
+                                    48 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528968010" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528968609" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
