--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.indiegogo.com/projects/potato-pirates-the-tastiest-coding-card-game/reft/17493735/hackernews">Learn Coding Without Computers</a>
+                                    <a href="https://theoutline.com/post/4920/antarctica-is-screwed-research-climate-change-global-warming-melting">Antarctica is screwed and so are we</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17303413">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17305367">
                                         
-                                            8 comments
+                                            9 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=adityabatura">adityabatura</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528900329"
+                                            href="https://news.ycombinator.com/user?id=nwrk">nwrk</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528911851"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    19 points
+                                    15 points
                                 </span>
                             </td>
                         </tr>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528969206" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528969811" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
