--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.gatesnotes.com/Health/The-big-chill">Can this cooler save kids from dying?</a>
+                                    <a href="https://medium.com/@val_deleplace/go-code-refactoring-the-23x-performance-hunt-156746b522f7">Go code refactoring: the 23x performance hunt</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17305791">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17283811">
                                         
-                                            26 comments
+                                            53 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=mhb">mhb</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528914623"
+                                            href="https://news.ycombinator.com/user?id=anastalaz">anastalaz</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528722034"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    169 points
+                                    170 points
                                 </span>
                             </td>
                         </tr>
@@ -251,7 +251,7 @@
                                             href="https://news.ycombinator.com/user?id=lkurusa">lkurusa</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528925406"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    167 points
+                                    168 points
                                 </span>
                             </td>
                         </tr>
@@ -389,7 +389,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17305683">
                                         
-                                            61 comments
+                                            62 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=amelius">amelius</a></strong> &nbsp;•&nbsp;
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528969811" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528970412" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
